# crimebot

./: README.md  describe_project.py  main.py  pyproject.toml  requirements.txt  wam_proivder_base.py
crimebot/: chatbot.py  generate_chatbot_structure.py  repl.py  voice_services.py
crimebot/cards/: tarot_module.py
crimebot/cards/data/: major_arcana.json  minor_arcana.json
crimebot/chatbot/: main.py
crimebot/chatbot/animations/: AITalker.py
crimebot/chatbot/api/: __init__.py  create_python_project.py  docker_info.py  firewall_status.py  nmap_scan.py  router.py
crimebot/chatbot/config/: .env  .flake8  docker-compose.yaml  logging.conf
crimebot/chatbot/config/grafana/provisioning/dashboards/: chatbot-dashboard.json
crimebot/chatbot/models/: __init__.py  docker_info.py  nmap_result.py  project_config.py
crimebot/chatbot/tests/: conftest.py  test_api.py
crimebot/commander/: README.md  __init__.py  api.py  command_service.py  docker.py  docker_service.py
crimebot/commander/cconf/: docker-compose.yaml
crimebot/commander/conf/: Dockerfile  docker-compose.yaml
crimebot/commander/mconf/: Dockerfile  README.md  requirements.txt
crimebot/deep_fake_communicator/: deepfake.ini  deepfake_client.py
crimebot/hybrid_compute/: cli.py  config.json  encryptor.py  file_handler.py  quaternion.py  quaternion_encoder.py  quaternionkey.py
crimebot/hybrid_compute/services/: last_stagez.py
crimebot/obfuscator/: README.md  __init__.py  requirements.txt  spatial_encoder.py  test_decrypting_loader.py  test_example.py  wam_builder.py  wam_cli.py  wam_config.py  wam_provider.py  wam_provider_base.py
crimebot/obfuscator/detonator/: create_armed_bin.sh  detonator.go
crimebot/obfuscator/docs/: example_README.md
crimebot/obfuscator/go_files/: main.go
crimebot/obfuscator/launcher/: go.sum  launcher.go
crimebot/obfuscator/payloads/: example.py  example2.py
crimebot/obfuscator/pyc/: advanced_obfuscator.py  decrypting_loader.py  encrypted_module.py  generate_image.py  load_encryptor.py  pyc-obfuscator.py
crimebot/obfuscator/tests/: test_decrypting_loader.py  test_wam_payload_execution.py  test_wam_workflow.py
crimebot/scanners/: air_crack_tools.py
